Added test examples page. Added files for an example.

--- a/partials/examplesPage.html
+++ b/partials/examplesPage.html
@@ -1,5 +1,128 @@
-<div class="container-fluid body rowstyles portal-contact-page" style=" overflow: auto">
-	<div class="content rowstyles portal-contact-content" style=" padding: 0 20px;">
-		<h1>Coming Soon...</h1>
+<div class="container-fluid body rowstyles" data-spy="scroll" data-target=".bs-docs-sidenav">
+	<div class="content rowstyles colstyles" style="position:absolute; top: 20px; bottom: 20px">
+			<div  style="position:absolute; width: 250px; top: 0; left: 0" class="bs-docs-sidebar">
+				<ul class="nav nav-list bs-docs-sidenav">
+					<li><a scrollto href="#basic"><i class="icon-chevron-right"></i>Basic Example</a></li>
+					<li><a scrollto href="#transitions"><i class="icon-chevron-right"></i>Transitions</a></li>
+				</ul>
+			</div>
+			<div id="exampleDefinitions" style="position:absolute;  left: 280px; top: 0; bottom:0; right: 20px; overflow: auto;">
+				<div id="basic" ng-controller="BasicExampleCtrl">
+					<h1 style="margin-top: 0">Basic Example</h1>
+					<p>Below is a basic example on how to use ng-grid:
+					<ul style="margin-bottom:0px;" class="nav nav-tabs">
+						<li class="nav" ng-repeat="tab in basicTabs" ng-class="{active: selectedBasicTab == tab}">
+							<a ng-click="switchTab(tab.index)">{{tab.title}}</a>
+						</li>
+					</ul>
+					<div ng-include src="selectedBasicTab.link"></div>
+				</div>
+				<div id="transitions">
+					<h1>Transistion</h1>
+					<div>
+					  <h2>Why ng-grid?</h2>
+					  <p>ng-grid offers many compelling features that are used commonly in grids today such as: grouping, resizable and reorderable columns, sorting, cell and row templates, built-in angular filters, and much more! <a target="blank" href="https://github.com/angular-ui/ng-grid/wiki">Learn more...</a></p>
+					</div>
+					<div>
+					  <h2>Alternatives</h2>
+					  <p>Even though we think our grid is ideal for everyone using angular, there are alternatives such as:
+					  <ul>
+						<li><a target="blank" href="http://jsfiddle.net/dalcib/2w6Su/">http://jsfiddle.net/dalcib/2w6Su/</a></li>
+						<li><a target="blank" href="https://github.com/lordnox/angri/">https://github.com/lordnox/angri/</a></li>
+					  </ul>
+					</div>
+					<div >
+					  <h2>Extensible</h2>
+					  <p>With ng-grid, you can create plugins that can enhance the capabilities of the grid! Want to extend functionality? Make a plugin!</p>
+					</div>
+				</div>
+				<div id="home">
+					
+					<div>
+					  <h2>Why ng-grid?</h2>
+					  <p>ng-grid offers many compelling features that are used commonly in grids today such as: grouping, resizable and reorderable columns, sorting, cell and row templates, built-in angular filters, and much more! <a target="blank" href="https://github.com/angular-ui/ng-grid/wiki">Learn more...</a></p>
+					</div>
+					<div>
+					  <h2>Alternatives</h2>
+					  <p>Even though we think our grid is ideal for everyone using angular, there are alternatives such as:
+					  <ul>
+						<li><a target="blank" href="http://jsfiddle.net/dalcib/2w6Su/">http://jsfiddle.net/dalcib/2w6Su/</a></li>
+						<li><a target="blank" href="https://github.com/lordnox/angri/">https://github.com/lordnox/angri/</a></li>
+					  </ul>
+					</div>
+					<div >
+					  <h2>Extensible</h2>
+					  <p>With ng-grid, you can create plugins that can enhance the capabilities of the grid! Want to extend functionality? Make a plugin!</p>
+					</div>
+					
+					<div>
+					  <h2>Why ng-grid?</h2>
+					  <p>ng-grid offers many compelling features that are used commonly in grids today such as: grouping, resizable and reorderable columns, sorting, cell and row templates, built-in angular filters, and much more! <a target="blank" href="https://github.com/angular-ui/ng-grid/wiki">Learn more...</a></p>
+					</div>
+					<div>
+					  <h2>Alternatives</h2>
+					  <p>Even though we think our grid is ideal for everyone using angular, there are alternatives such as:
+					  <ul>
+						<li><a target="blank" href="http://jsfiddle.net/dalcib/2w6Su/">http://jsfiddle.net/dalcib/2w6Su/</a></li>
+						<li><a target="blank" href="https://github.com/lordnox/angri/">https://github.com/lordnox/angri/</a></li>
+					  </ul>
+					</div>
+					<div >
+					  <h2>Extensible</h2>
+					  <p>With ng-grid, you can create plugins that can enhance the capabilities of the grid! Want to extend functionality? Make a plugin!</p>
+					</div>
+					
+					<div>
+					  <h2>Why ng-grid?</h2>
+					  <p>ng-grid offers many compelling features that are used commonly in grids today such as: grouping, resizable and reorderable columns, sorting, cell and row templates, built-in angular filters, and much more! <a target="blank" href="https://github.com/angular-ui/ng-grid/wiki">Learn more...</a></p>
+					</div>
+					<div>
+					  <h2>Alternatives</h2>
+					  <p>Even though we think our grid is ideal for everyone using angular, there are alternatives such as:
+					  <ul>
+						<li><a target="blank" href="http://jsfiddle.net/dalcib/2w6Su/">http://jsfiddle.net/dalcib/2w6Su/</a></li>
+						<li><a target="blank" href="https://github.com/lordnox/angri/">https://github.com/lordnox/angri/</a></li>
+					  </ul>
+					</div>
+					<div >
+					  <h2>Extensible</h2>
+					  <p>With ng-grid, you can create plugins that can enhance the capabilities of the grid! Want to extend functionality? Make a plugin!</p>
+					</div>
+					
+					<div>
+					  <h2>Why ng-grid?</h2>
+					  <p>ng-grid offers many compelling features that are used commonly in grids today such as: grouping, resizable and reorderable columns, sorting, cell and row templates, built-in angular filters, and much more! <a target="blank" href="https://github.com/angular-ui/ng-grid/wiki">Learn more...</a></p>
+					</div>
+					<div>
+					  <h2>Alternatives</h2>
+					  <p>Even though we think our grid is ideal for everyone using angular, there are alternatives such as:
+					  <ul>
+						<li><a target="blank" href="http://jsfiddle.net/dalcib/2w6Su/">http://jsfiddle.net/dalcib/2w6Su/</a></li>
+						<li><a target="blank" href="https://github.com/lordnox/angri/">https://github.com/lordnox/angri/</a></li>
+					  </ul>
+					</div>
+					<div >
+					  <h2>Extensible</h2>
+					  <p>With ng-grid, you can create plugins that can enhance the capabilities of the grid! Want to extend functionality? Make a plugin!</p>
+					</div>
+					
+					<div>
+					  <h2>Why ng-grid?</h2>
+					  <p>ng-grid offers many compelling features that are used commonly in grids today such as: grouping, resizable and reorderable columns, sorting, cell and row templates, built-in angular filters, and much more! <a target="blank" href="https://github.com/angular-ui/ng-grid/wiki">Learn more...</a></p>
+					</div>
+					<div>
+					  <h2>Alternatives</h2>
+					  <p>Even though we think our grid is ideal for everyone using angular, there are alternatives such as:
+					  <ul>
+						<li><a target="blank" href="http://jsfiddle.net/dalcib/2w6Su/">http://jsfiddle.net/dalcib/2w6Su/</a></li>
+						<li><a target="blank" href="https://github.com/lordnox/angri/">https://github.com/lordnox/angri/</a></li>
+					  </ul>
+					</div>
+					<div >
+					  <h2>Extensible</h2>
+					  <p>With ng-grid, you can create plugins that can enhance the capabilities of the grid! Want to extend functionality? Make a plugin!</p>
+					</div>
+				</div>
+			</div>
 	</div>
 </div>
