--- a/css/app.css
+++ b/css/app.css
@@ -40,3 +40,40 @@
 	margin-left: auto; 
 	margin-right: auto;
 }
+
+.bs-docs-sidenav > li > a:hover {
+	background-color: whiteSmoke;
+}
+
+.nav > li > a:hover {
+	text-decoration: none;
+	background-color: #EEE;
+}
+
+.bs-docs-sidenav > li > a {
+	display: block;
+	width: 190px 9;
+	margin: 0 0 -1px;
+	padding: 8px 14px;
+	border: 1px solid #E5E5E5;
+}
+
+.bs-docs-sidenav .icon-chevron-right {
+	float: right;
+	margin-top: 2px;
+	margin-right: -6px;
+}
+
+.bs-docs-sidenav > li:first-child > a {
+	-webkit-border-radius: 6px 6px 0 0;
+	-moz-border-radius: 6px 6px 0 0;
+	border-radius: 6px 6px 0 0;
+}
+
+.bs-docs-sidenav > li:last-child > a {
+	-webkit-border-radius: 0 0 6px 6px;
+	-moz-border-radius: 0 0 6px 6px;
+	border-radius: 0 0 6px 6px;
+	border:  1px solid #E5E5E5;
+	margin-bottom:1px;
+}
