Adding two examples. Removing placeholder page.

--- a/partials/exampleDefinitions/masterDetail/masterDetailsCSS.html
+++ b/partials/exampleDefinitions/masterDetail/masterDetailsCSS.html
@@ -2,4 +2,9 @@
     border: 1px solid rgb(212,212,212);
     width: 400px; 
     height: 300px;
+    float: left;
+}
+
+.selectedItems{
+    float: left; 
 }</pre>
