--- a/partials/exampleDefinitions/masterDetail/masterDetailsHTML.html
+++ b/partials/exampleDefinitions/masterDetail/masterDetailsHTML.html
@@ -11,5 +11,6 @@
     &lt;/head&gt;
     &lt;body ng-controller="MyCtrl"&gt;
         &lt;div class="gridStyle" ng-grid="gridOptions"&gt;&lt;/div&gt;
+        &lt;div class="selectedItems"&gt;{{angularBindings}}&lt;/div&gt;
     &lt;/body&gt;
 &lt;/html&gt;</pre>	
