--- a/partials/exampleDefinitions/basic/basicExample.html
+++ b/partials/exampleDefinitions/basic/basicExample.html
@@ -1,5 +1,5 @@
 <h1 style="margin-top: 0">Basic Example</h1>
-<p>Below is a basic example on how to use ng-grid:
+<p>Below is a basic example on how to use ng-grid:</p>
 <ul style="margin-bottom:0px;" class="nav nav-tabs">
 	<li class="nav" ng-repeat="tab in basicTabs" ng-class="{active: selectedBasicTab == tab}">
 		<a ng-click="switchTab(tab.index)">{{tab.title}}</a>
