--- a/partials/exampleDefinitions/masterDetail/masterDetailsExample.html
+++ b/partials/exampleDefinitions/masterDetail/masterDetailsExample.html
@@ -1,4 +1,4 @@
-<h1 style="margin-top: 0">Master/Details Example</h1>
+<h1 style="margin-top: 0;">Master/Details Example</h1>
 <p>Below is an example on how to make a master/details view using ng-grid:
 <ul style="margin-bottom:0px;" class="nav nav-tabs">
 	<li class="nav" ng-repeat="tab in basicTabs" ng-class="{active: selectedBasicTab == tab}">
