--- a/partials/exampleDefinitions/columnDefs/columnDefsExample.html
+++ b/partials/exampleDefinitions/columnDefs/columnDefsExample.html
@@ -1,4 +1,4 @@
-<h1 style="margin-top: 0">Defining Column Definitions Example</h1>
+<h1 style="margin-top: 0">Column Definitions Example</h1>
 <p>Below is an example on how to define column definitions in ng-grid:</p>
 <ul style="margin-bottom:0px;" class="nav nav-tabs">
 	<li class="nav" ng-repeat="tab in basicTabs" ng-class="{active: selectedBasicTab == tab}">
@@ -6,5 +6,5 @@
 	</li>
 </ul>
 <div ng-include src="link()"></div>
-<p>Below is the outcome of the grid. View plunker <a target="blank" href="http://plnkr.co/edit/T6qaQX">here</a>.</p>
+<p>Below is the outcome of the grid. View plunker <a target="blank" href="http://plnkr.co/edit/O5llvsl2nS0OcRNU7XON">here</a>.</p>
 <div style=" margin-left: auto; margin-right: auto; border: 1px solid rgb(212,212,212); width: 400px; height: 300px; margin-top: 20px; " ng-grid="gridOptions"></div>
