--- a/partials/exampleDefinitions/templates/cellTemplates/stringCellTemplate/stringCellTemplateExample.html
+++ b/partials/exampleDefinitions/templates/cellTemplates/stringCellTemplate/stringCellTemplateExample.html
@@ -1,10 +1,10 @@
-<h1 style="margin-top: 0">Basic Example</h1>
-<p>Below is a basic example on how to use ng-grid:</p>
+<h3 style="margin-top: 0">Cell Template Example - String</h3>
+<p>Below is an example on how to define cell templates using strings in ng-grid:</p>
 <ul style="margin-bottom:0px;" class="nav nav-tabs">
 	<li class="nav" ng-repeat="tab in basicTabs" ng-class="{active: selectedBasicTab == tab}">
 		<a ng-click="switchTab(tab.index)">{{tab.title}}</a>
 	</li>
 </ul>
 <div ng-include src="link()"></div>
-<p>Below is the outcome of the grid. View plunker <a target="blank" href="http://plnkr.co/edit/T6qaQX">here</a>.</p>
+<p>Below is the outcome of the grid. View plunker <a target="blank" href="http://plnkr.co/edit/O5llvsl2nS0OcRNU7XON">here</a>.</p>
 <div style=" margin-left: auto; margin-right: auto; border: 1px solid rgb(212,212,212); width: 400px; height: 300px; margin-top: 20px; " ng-grid="gridOptions"></div>
