--- a/css/ng-grid.css
+++ b/css/ng-grid.css
@@ -170,7 +170,10 @@
     z-index: 5; 
 }
 .ngHeaderText {
-    margin-left: 5px;
+    padding: 5px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
     white-space: nowrap;
     -ms-text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
@@ -225,8 +228,10 @@
 }
 
 .ngCellText {
-    margin-left: 5px;
-    margin-top: 5px;
+    padding: 5px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
     white-space: nowrap;
     -ms-text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
