--- a/css/ng-grid.css
+++ b/css/ng-grid.css
@@ -386,6 +386,11 @@ input {
 .ngPagerButton{
 	height: 25px;
 	min-width: 26px;
+	margin-bottom: 10px;
+}
+
+.ngPagerCurrent{
+	margin-bottom: 10px;
 }
 
 .ngPagerFirstTriangle{
