--- a/partials/examplesPage.html
+++ b/partials/examplesPage.html
@@ -5,6 +5,8 @@
 				<li><a scrollto href="#basic"><i class="icon-chevron-right"></i>Basic</a></li>
 				<li><a scrollto href="#columnDefs"><i class="icon-chevron-right"></i>Column Definitions</a></li>
 				<li><a scrollto href="#grouping"><i class="icon-chevron-right"></i>Grouping</a></li>
+				<li><a scrollto href="#templates"><i class="icon-chevron-right"></i>Templates</a></li>
+				<li><a scrollto href="#paging"><i class="icon-chevron-right"></i>Server-Side Paging</a></li>
 				<li><a scrollto href="#masterdetail"><i class="icon-chevron-right"></i>Master/Detail</a></li>
 			</ul>
 		</div>
@@ -12,13 +14,19 @@
 			<section id="basic" ng-controller="BasicExampleCtrl" style="height: 900px;">
 				<div ng-include src="'partials/exampleDefinitions/basic/basicExample.html'"></div>
 			</section>
-			<section id="columnDefs" ng-controller="ColumnDefsExampleCtrl" style="height: 1800px;">
+			<section id="columnDefs" ng-controller="ColumnDefsExampleCtrl" style="height: 950px;">
 				<div ng-include src="'partials/exampleDefinitions/columnDefs/columnDefsExample.html'"></div>
 			</section>
-			<section id="grouping" ng-controller="GroupingExampleCtrl" style="height: 1800px;">
+			<section id="grouping" style="height: 1800px;">
 				<div ng-include src="'partials/exampleDefinitions/grouping/groupingExample.html'"></div>
 			</section>
-			<section id="masterdetail" ng-controller="MasterDetailExampleCtrl">
+			<section id="templates" style="height: 950px;">
+				<div ng-include src="'partials/exampleDefinitions/templates/templatesExample.html'"></div>
+			</section>
+			<section id="paging" ng-controller="PagingExampleCtrl" style="height: 950px;">
+				<div ng-include src="'partials/exampleDefinitions/paging/pagingExample.html'"></div>
+			</section>
+			<section id="masterdetail" ng-controller="MasterDetailExampleCtrl" style="height: 950px;">
 				<div ng-include src="'partials/exampleDefinitions/masterDetail/masterDetailsExample.html'"></div>
 			</section>
 		</div>
