--- a/partials/exampleDefinitions/templates/cellTemplates/stringCellTemplate/stringCellTemplateCSS.html
+++ b/partials/exampleDefinitions/templates/cellTemplates/stringCellTemplate/stringCellTemplateCSS.html
@@ -2,4 +2,9 @@
     border: 1px solid rgb(212,212,212);
     width: 400px; 
     height: 300px;
+}
+
+.green {
+    background-color: green;
+    color: white;
 }</pre>
