Added file referenced template and row template example.

--- a/partials/exampleDefinitions/templates/templatesExample.html
+++ b/partials/exampleDefinitions/templates/templatesExample.html
@@ -1,2 +1,4 @@
-<h1 style="margin-top: 0">Template Examples</h1>
+<h1 style="margin-top: 0;">Template Examples</h1>
 <div ng-include src="'partials/exampleDefinitions/templates/cellTemplates/stringCellTemplate/stringCellTemplateExample.html'"></div>
+<div ng-include src="'partials/exampleDefinitions/templates/cellTemplates/fileReferencedCellTemplate/fileReferencedCellTemplateExample.html'"></div>
+<div ng-include src="'partials/exampleDefinitions/templates/rowTemplates/rowTemplateExample.html'"></div>
