--- a/partials/exampleDefinitions/templates/cellTemplates/fileReferencedCellTemplate/fileReferencedCellTemplateExample.html
+++ b/partials/exampleDefinitions/templates/cellTemplates/fileReferencedCellTemplate/fileReferencedCellTemplateExample.html
@@ -1,12 +1,12 @@
-<div ng-controller="StringCellTemplateCtrl">
-	<h3>String-based Cell Templates</h3>
-	<p>Below is an example on how to define cell templates using strings in ng-grid:</p>
+<div ng-controller="FileReferencedCellTemplateCtrl">
+	<h3>File-referenced Cell Templates</h3>
+	<p>Below is an example on how to define cell templates using file references in ng-grid:</p>
 	<ul style="margin-bottom:0px;" class="nav nav-tabs">
 		<li class="nav" ng-repeat="tab in basicTabs" ng-class="{active: selectedBasicTab == tab}">
 			<a ng-click="switchTab(tab.index)">{{tab.title}}</a>
 		</li>
 	</ul>
 	<div ng-include src="link()"></div>
-	<p>Below is the outcome of the grid. View plunker <a target="blank" href="http://plnkr.co/edit/rUmvYMHIWhWJb4sDP0dH">here</a>.</p>
+	<p>Below is the outcome of the grid. View plunker <a target="blank" href="http://plnkr.co/edit/iv50t3OpzpUvcGrz9Zkp">here</a>.</p>
 	<div style="margin-left: auto; margin-right: auto; border: 1px solid rgb(212,212,212); width: 400px; height: 300px; margin-top: 20px;" ng-grid="gridOptions"></div>
 </div>
