--- a/partials/exampleDefinitions/templates/rowTemplates/rowTemplateExample.html
+++ b/partials/exampleDefinitions/templates/rowTemplates/rowTemplateExample.html
@@ -1,6 +1,6 @@
-<div ng-controller="StringCellTemplateCtrl">
-	<h3>String-based Cell Templates</h3>
-	<p>Below is an example on how to define cell templates using strings in ng-grid:</p>
+<div ng-controller="RowTemplateCtrl">
+	<h3>Row Templates</h3>
+	<p>Below is an example on how to define row templates in ng-grid:</p>
 	<ul style="margin-bottom:0px;" class="nav nav-tabs">
 		<li class="nav" ng-repeat="tab in basicTabs" ng-class="{active: selectedBasicTab == tab}">
 			<a ng-click="switchTab(tab.index)">{{tab.title}}</a>
