--- a/partials/exampleDefinitions/templates/rowTemplates/rowTemplateJS.html
+++ b/partials/exampleDefinitions/templates/rowTemplates/rowTemplateJS.html
@@ -8,10 +8,7 @@ app.controller('MyCtrl', function($scope) {
                     {name: "Enos", age: 34}];
     $scope.gridOptions = { 
         data: 'myData',
-        showColumnMenu: false,
-        rowTemplate: '&lt;div ng-repeat="col in visibleColumns()" class="ngCell col{{angularBindingsIndex}} {{angularBindingsCellClass}}" ng-class="{\'ui-widget-content\':jqueryUITheme, green: row.getProperty('age')  < 30}" ng-cell&gt;&lt;/div&gt;',
-        columnDefs: [{field: 'name', displayName: 'Name'},
-                     {field:'age', displayName:'Age'}]
+        rowTemplate: '&lt;div ng-repeat="col in visibleColumns()" class="ngCell col{{angularBindingsIndex}} {{angularBindingsCellClass}}" ng-class="{\'ui-widget-content\':jqueryUITheme, green: row.getProperty('age')  < 30}" ng-cell&gt;&lt;/div&gt;'
     };
 });
 </pre>
