selection callbacks improved when multi-selecting
default sort can be specified
also sorting persists if data changes

--- a/src/templates/gridTemplate.html
+++ b/src/templates/gridTemplate.html
@@ -22,7 +22,7 @@
         </div>
         <div ng-show="showMenu" class="ngColMenu">
             <div ng-show="showFilter">
-                <input placeholder="Seach Field:Value" type="text" ng-model="filterText"/>
+                <input placeholder="Search {Field: Value}" type="text" ng-model="filterText"/>
             </div>
             <div ng-show="showColumnMenu">
                 <span class="ngMenuText">Choose Columns:</span>
