--- a/partials/exampleDefinitions/masterDetail/masterDetailsExample.html
+++ b/partials/exampleDefinitions/masterDetail/masterDetailsExample.html
@@ -8,6 +8,11 @@
 <div ng-include src="link()"></div>
 <p>Below is the outcome of the grid. View plunker <a target="blank" href="http://plnkr.co/edit/CncDWCktXTuBQdDVfuVv">here</a>.</p>
 <div>
-	<div style="float:left; border: 1px solid rgb(212,212,212); width: 400px; height: 300px; margin-top: 12px; " ng-grid="gridOptions"></div>
-	<div style="float:left;margin-left: 20px; margin-top: 10px; ">{{mySelections}}</div>
+    <div style="float:left; border: 1px solid rgb(212,212,212); width: 400px; height: 300px; margin-top: 12px; " ng-grid="gridOptions"></div>
+    <div ng-show="mySelections[0] != null" style="float:left; margin-left: 20px; margin-top: 10px; height: 300px; width: 400px;">
+        <ul>
+            <li>{{mySelections[0].age}}</li>
+            <li>{{mySelections[0].name}}</li>
+        </ul>
+    </div>
 </div>
