Updated paging example.

--- a/partials/exampleDefinitions/paging/pagingJS.html
+++ b/partials/exampleDefinitions/paging/pagingJS.html
@@ -38,7 +38,7 @@ app.controller('MyCtrl', function($scope, $http) {
         }, 100);
     };
 	
-    $scope.myData = $scope.getPagedDataAsync($scope.pagingOptions.pageSize, $scope.pagingOptions.currentPage);
+    $scope.getPagedDataAsync($scope.pagingOptions.pageSize, $scope.pagingOptions.currentPage);
 	
     $scope.$watch('pagingOptions', function () {
         $scope.getPagedDataAsync($scope.pagingOptions.pageSize, $scope.pagingOptions.currentPage, $scope.filterOptions.filterText);
