--- a/partials/exampleDefinitions/grouping/groupByJQueryUI/groupByJQueryUIHTML.html
+++ b/partials/exampleDefinitions/grouping/groupByJQueryUI/groupByJQueryUIHTML.html
@@ -5,6 +5,7 @@
         &lt;link rel="stylesheet" type="text/css" href="ng-grid.css" /&gt;
         &lt;link rel="stylesheet" type="text/css" href="style.css" /&gt;
         &lt;script type="text/javascript" src="jquery-1.8.2.js">&lt;/script&gt;
+        &lt;script type="text/javascript" src="jquery-ui.js">&lt;/script&gt;
         &lt;script type="text/javascript" src="angular.js"&gt;&lt;/script&gt;
         &lt;script type="text/javascript" src="ng-grid-1.3.2.js"&gt;&lt;/script&gt;
         &lt;script type="text/javascript" src="main.js"&gt;&lt;/script&gt;
