enableSorting/ColumnResize are now meaningful

--- a/src/templates/gridTemplate.html
+++ b/src/templates/gridTemplate.html
@@ -21,7 +21,7 @@
         </div>
         <div ng-show="showMenu" class="ngColMenu">
             <div ng-show="showFilter">
-                <input placeholder="Search {Field: Value}" type="text" ng-model="filterText"/>
+                <input placeholder="Search..." type="text" ng-model="filterText"/>
             </div>
             <div ng-show="showColumnMenu">
                 <span class="ngMenuText">Choose Columns:</span>
