default cursors make more sense
and actually making enableColumnResize and enableSorting meaningful

--- a/src/templates/headerCellTemplate.html
+++ b/src/templates/headerCellTemplate.html
@@ -1,5 +1,5 @@
 <!--ng.defaultHeaderCellTemplate-->
-<div ng-click="col.sort()" class="ngHeaderSortColumn {{col.headerClass}}" ng-class="{ 'ngSorted': !noSortVisible }">
+<div ng-click="col.sort()" class="ngHeaderSortColumn {{col.headerClass}}" ng-style="{'cursor': col.cursor}" ng-class="{ 'ngSorted': !noSortVisible }">
     <div class="ngHeaderText colt{{$index}}">{{col.displayName}}</div>
     <div class="ngSortButtonDown" ng-show="col.showSortButtonDown()"></div>
     <div class="ngSortButtonUp" ng-show="col.showSortButtonUp()"></div>
