--- a/src/templates/rowTemplate.html
+++ b/src/templates/rowTemplate.html
@@ -1,2 +1,2 @@
 <!--ng.defaultRowTemplate-->
-<div ng-repeat="col in visibleColumns()" class="ngCell col{{$index}} {{col.cellClass}}" ng-cell></div>
+<div ng-style="{'cursor': row.cursor}" ng-repeat="col in visibleColumns()" class="ngCell col{{$index}} {{col.cellClass}}" ng-cell></div>
