Updated github link.

--- a/partials/overviewPage.html
+++ b/partials/overviewPage.html
@@ -9,7 +9,7 @@
 				<p>Team members:</p>
 				<ul>
 					<li><a target="blank" href="http://ornerydevelopment.blogspot.com/">Tim Sweet</a></li>
-					<li><a target="blank" href="https://github.com/xcrico">Jonathon Ricaurte</a></li>
+					<li><a target="blank" href="https://github.com/jonricaurte">Jonathon Ricaurte</a></li>
 				</ul>	
 				<a style="width:150px" class="btn btn-primary" href="https://github.com/angular-ui/ng-grid/zipball/master"><i class="icon-white icon-download-alt"></i> Download ZIP</a>
 			</div>
