--- a/css/ng-grid.css
+++ b/css/ng-grid.css
@@ -117,13 +117,13 @@
 .ngHeaderSortColumn{
 	position:absolute;
     overflow: hidden;
-	cursor: pointer;
 }
 
 .ngHeaderCell{
 	border-left: 1px solid rgb(212,212,212);
     position: absolute;
-    cursor: pointer;
+    top: 0; 
+    bottom: 0; 
 }
 
 .ngHeaderCell:first-child{
@@ -195,7 +195,6 @@
 .ngRow {
     position: absolute;
     border-bottom: 1px solid rgb(229, 229, 229);
-    cursor: pointer;
 }
 .ngRow.even {
     background-color: rgb(243, 243, 243);
@@ -216,6 +215,8 @@
     overflow: hidden; 
     position: absolute;
 	border-left: 1px solid rgb(212,212,212);
+    top: 0; 
+    bottom: 0; 
 }
 
 .ngCell:first-child{
@@ -385,7 +386,6 @@ input {
 .ngPagerButton{
 	height: 25px;
 	min-width: 26px;
-	margin-bottom: 10px;
 }
 
 .ngPagerFirstTriangle{
