--- a/src/templates/gridTemplate.html
+++ b/src/templates/gridTemplate.html
@@ -1,7 +1,7 @@
 <!--ng.defaultGridTemplate-->
     <div class="ngTopPanel" ng-class="{'ui-widget-header':jqueryUITheme, 'ui-corner-top': jqueryUITheme}" ng-style="topPanelStyle()">
         <div class="ngGroupPanel" ng-show="showGroupPanel()" ng-style="headerStyle()">
-            <div class="ngGroupPanelDescription" ng-show="configGroups.length == 0">Drag a column header here and drop it to group by that column</div>
+            <div class="ngGroupPanelDescription" ng-show="configGroups.length == 0">{{i18n.ngGroupPanelDescription}}</div>
             <ul ng-show="configGroups.length > 0" class="ngGroupList">
                 <li class="ngGroupItem" ng-repeat="group in configGroups">
                     <span class="ngGroupElement">
@@ -21,10 +21,10 @@
         </div>
         <div ng-show="showMenu" class="ngColMenu">
             <div ng-show="showFilter">
-                <input placeholder="Search..." type="text" ng-model="filterText"/>
+                <input placeholder="{{i18n.ngSearchPlaceHolder}}" type="text" ng-model="filterText"/>
             </div>
             <div ng-show="showColumnMenu">
-                <span class="ngMenuText">Choose Columns:</span>
+                <span class="ngMenuText">{{i18n.ngMenuText}}</span>
                 <ul class="ngColList">
                     <li class="ngColListItem" ng-repeat="col in columns | ngColumns">
                         <label><input type="checkbox" class="ngColListCheckbox" ng-model="col.visible"/>{{col.displayName}}</label>
@@ -43,25 +43,25 @@
 <div class="ngFooterPanel" ng-class="{'ui-widget-content': jqueryUITheme, 'ui-corner-bottom': jqueryUITheme}" ng-style="footerStyle()">
     <div class="ngTotalSelectContainer" ng-show="footerVisible">
         <div class="ngFooterTotalItems" ng-class="{'ngNoMultiSelect': !multiSelect}" >
-            <span class="ngLabel">Total Items: {{maxRows()}}</span><span ng-show="filterText.length > 0" class="ngLabel">(Showing Items: {{totalFilteredItemsLength()}})</span>
+            <span class="ngLabel">{{i18n.ngTotalItemsLabel}} {{maxRows()}}</span><span ng-show="filterText.length > 0" class="ngLabel">({{i18n.ngShowingItemsLabel}} {{totalFilteredItemsLength()}})</span>
         </div>
         <div class="ngFooterSelectedItems" ng-show="multiSelect">
-            <span class="ngLabel">Selected Items: {{selectedItems.length}}</span>
+            <span class="ngLabel">{{i18n.ngSelectedItemsLabel}} {{selectedItems.length}}</span>
         </div>
     </div>
     <div class="ngPagerContainer" style="float: right; margin-top: 10px;" ng-show="footerVisible && enablePaging" ng-class="{'ngNoMultiSelect': !multiSelect}">
         <div style="float:left; margin-right: 10px;" class="ngRowCountPicker">
-            <span style="float: left; margin-top: 3px;" class="ngLabel">Page Size:</span>
+            <span style="float: left; margin-top: 3px;" class="ngLabel">{{i18n.ngPageSizeLabel}}</span>
             <select style="float: left;height: 27px; width: 100px" ng-model="pagingOptions.pageSize" >
                 <option ng-repeat="size in pagingOptions.pageSizes">{{size}}</option>
             </select>
         </div>
         <div style="float:left; margin-right: 10px; line-height:25px;" class="ngPagerControl" style="float: left; min-width: 135px;">
-            <button class="ngPagerButton" ng-click="pageToFirst()" ng-disabled="cantPageBackward()" title="First Page"><div class="ngPagerFirstTriangle"><div class="ngPagerFirstBar"></div></div></button>
-            <button class="ngPagerButton" ng-click="pageBackward()" ng-disabled="cantPageBackward()" title="Previous Page"><div class="ngPagerFirstTriangle ngPagerPrevTriangle"></div></button>
+            <button class="ngPagerButton" ng-click="pageToFirst()" ng-disabled="cantPageBackward()" title="{{i18n.ngPagerFirstTitle}}"><div class="ngPagerFirstTriangle"><div class="ngPagerFirstBar"></div></div></button>
+            <button class="ngPagerButton" ng-click="pageBackward()" ng-disabled="cantPageBackward()" title="{{i18n.ngPagerPrevTitle}}"><div class="ngPagerFirstTriangle ngPagerPrevTriangle"></div></button>
             <input class="ngPagerCurrent" type="text" style="width:50px; height: 24px; margin-top: 1px; padding: 0px 4px;" ng-model="pagingOptions.currentPage"/>
-            <button class="ngPagerButton" ng-click="pageForward()" ng-disabled="cantPageForward()" title="Next Page"><div class="ngPagerLastTriangle ngPagerNextTriangle"></div></button>
-            <button class="ngPagerButton" ng-click="pageToLast()" ng-disabled="cantPageForward()" title="Last Page"><div class="ngPagerLastTriangle"><div class="ngPagerLastBar"></div></div></button>
+            <button class="ngPagerButton" ng-click="pageForward()" ng-disabled="cantPageForward()" title="{{i18n.ngPagerNextTitle}}"><div class="ngPagerLastTriangle ngPagerNextTriangle"></div></button>
+            <button class="ngPagerButton" ng-click="pageToLast()" ng-disabled="cantPageForward()" title="{{i18n.ngPagerLastTitle}}"><div class="ngPagerLastTriangle"><div class="ngPagerLastBar"></div></div></button>
         </div>
     </div>
 </div>
