--- a/ng-grid.css
+++ b/ng-grid.css
@@ -213,7 +213,7 @@
     border-right: 1px solid rgb(212,212,212);
 }
 
-.focusedCellElement:focus {
+.ngCellElement:focus {
 	outline: 0;
     background-color: rgb(179, 196, 199);
 }
