Updated to use header from angularui.

--- a/partials/apiPage.html
+++ b/partials/apiPage.html
@@ -1,4 +1,5 @@
-<div class="container-fluid body rowstyles scroll-y" style="width: 1170px; margin: 20px auto 20px auto;">
+<section id="api" class="portal-contact-page">
+<div ng-controller="ApiPageCtrl" style="width: 1170px; margin: auto">
 	<h1>API Documentation</h1>
 	<h3>Grid Options</h3>
 	<table border="1">
@@ -31,3 +32,4 @@
 		</tr>
 	</table>
 </div>
+</section>
