--- a/partials/exampleDefinitions/masterDetail/masterDetailsJS.html
+++ b/partials/exampleDefinitions/masterDetail/masterDetailsJS.html
@@ -1,4 +1,4 @@
-<pre style="background-color: white; height: 325px; border-radius: 0 0 4px 4px; border-top:0px;" class="prettyprint">
+<pre style="background-color: white; height: 325px; border-radius: 0 0 4px 4px; border-top:0px; white-space: pre; word-wrap: normal; overflow: auto" class="prettyprint">
 var app = angular.module('myApp', ['ngGrid']);
 app.controller('MyCtrl', function($scope) {
     $scope.mySelections = [];
