--- a/partials/exampleDefinitions/templates/templatesExample.html
+++ b/partials/exampleDefinitions/templates/templatesExample.html
@@ -1,4 +1,4 @@
 <h1 style="margin-top: 0;">Template Examples</h1>
-<div ng-include src="'partials/exampleDefinitions/templates/cellTemplates/stringCellTemplate/stringCellTemplateExample.html'"></div>
-<div ng-include src="'partials/exampleDefinitions/templates/cellTemplates/fileReferencedCellTemplate/fileReferencedCellTemplateExample.html'"></div>
-<div ng-include src="'partials/exampleDefinitions/templates/rowTemplates/rowTemplateExample.html'"></div>
+<div ng-include src="'partials/exampleDefinitions/templates/cellTemplates/stringCellTemplate/stringCellTemplateExample.html'" style="height: 500px"></div>
+<div ng-include src="'partials/exampleDefinitions/templates/cellTemplates/fileReferencedCellTemplate/fileReferencedCellTemplateExample.html'" style="height: 500px"></div>
+<div ng-include src="'partials/exampleDefinitions/templates/rowTemplates/rowTemplateExample.html'" style="height: 500px"></div>
