--- a/partials/exampleDefinitions/grouping/groupingExample.html
+++ b/partials/exampleDefinitions/grouping/groupingExample.html
@@ -1,3 +1,3 @@
 <h1 style="margin-top: 0;">Grouping Examples</h1>
-<div ng-include src="'partials/exampleDefinitions/grouping/groupByHTML5/groupByHTML5Example.html'"></div>
-<div ng-include src="'partials/exampleDefinitions/grouping/groupByJQueryUI/groupByJQueryUIExample.html'"></div>
+<div ng-include src="'partials/exampleDefinitions/grouping/groupByHTML5/groupByHTML5Example.html'" style="height: 500px"></div>
+<div ng-include src="'partials/exampleDefinitions/grouping/groupByJQueryUI/groupByJQueryUIExample.html'" style="height: 500px"></div>
